Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62297

QCoreApplication::processEvents unreliable with glib event dispatcher

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10.0 Alpha
    • Some future release
    • Other
    • None

    Description

      With Glib event dispatcher the following sequence of code may assert:

      QCoreApplication::processEvents();
      Q_ASSERT(QWindowSystemInterface::windowSystemEventsQueued() == 0);
      

      See attachment for compilable test code. It all depends on timing, but it is easier to reproduce when CPU is busy (e.g. when compiling) and mouse hovers over the test window. Sometimes it is enough just to start the test and it immediately (after few iterations in the loop) asserts.

      Attachments

        1. bug.tar.gz
          0.8 kB
          Gatis Paeglis
        For Gerrit Dashboard: QTBUG-62297
        # Subject Branch Project Status CR V

        Activity

          People

            paeglis Gatis Paeglis
            paeglis Gatis Paeglis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes